# research-competition-harness

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.claude/agents/: appendix-builder.md  background-researcher.md  brainstorm.md  critic.md  draft-writer.md  evidence-curator.md  finalizer.md  hwpx-designer.md  icon-artist.md  photo-curator.md  reference-miner.md  summary-sheet.md  survey-analyst.md  table-layout.md  toc-builder.md
diagnostics/2026-music-output/: appendix.md  bundle-manifest.json  finalization-checklist.md  harness-check.json  missing-inputs.json  missing-inputs.md  render-check.json  render-check.md  report-draft.md  revision-tasks.md  summary-sheet.md  toc.md
docs/: agent-orchestration.md  architecture.md  lane-contract.md  mcp.md
examples/synthetic/: claim-ledger.json  lane-output.json  lane-output.md  verdict.json
schemas/: claim-ledger.schema.json  lane-output.schema.json  rubric-score.schema.json  verdict.schema.json
skills/: README.md
skills/agent-harness-skill/: SKILL.md
skills/agent-runner-skill/: SKILL.md
skills/brainstorm-skill/: SKILL.md
skills/evidence-ledger-skill/: SKILL.md
skills/hancom-render-qa-skill/: SKILL.md
skills/hwpx-finalizer-skill/: SKILL.md
skills/input-intake-skill/: SKILL.md
skills/photo-privacy-curator-skill/: SKILL.md
skills/reference-report-miner-skill/: SKILL.md
tests/: test_agent_harness.py  test_agents.py  test_brainstorm.py  test_cli.py  test_core_competency.py  test_generation.py  test_hwpx_page.py  test_icons.py  test_mcp_server.py  test_pipeline.py
(+33 files in other folders)
