[project]
name = "research-competition-harness"
version = "0.1.0"
description = "Local-first multi-agent harness for Korean research competition report production."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
rch = "rch.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
