[project]
name = "research-competition-harness"
version = "0.1.0"
description = "Local-first multi-agent harness for Korean research competition report production."
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
xlsx = ["openpyxl>=3.0"]
mcp = ["mcp>=1.2"]

[project.scripts]
rch = "rch.cli:main"
rch-mcp = "rch.mcp_server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
